--- a/server/plugins/Citizens/saves.yml
+++ b/server/plugins/Citizens/saves.yml
@@ -120,12 +120,12 @@ npc:
     traits:
       type: PLAYER
       location:
-        headYaw: -115.417206
+        headYaw: 0.0
         world: world
         x: '105.4995'
         y: '31.0'
         z: '-94.5414'
-        yaw: '-115.4172'
+        yaw: '0.0'
         pitch: '-45.1146'
       lookclose:
         range: '5.0'
@@ -145,7 +145,7 @@ npc:
       owner:
         owner: BiShop
         uuid: 9754b8e3-52ad-3c33-b44a-a5ed356ad6f2
-    traitnames: scoreboardtrait,lookclose,spawned,type,inventory,location,owner,equipment,gravity,mounttrait
+    traitnames: gravity,lookclose,equipment,location,type,scoreboardtrait,mounttrait,owner,inventory,spawned
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -174,17 +174,17 @@ npc:
           '0': 0.0
           '1': 360.0
       location:
-        headYaw: 89.39624
+        headYaw: 0.0
         world: world
         x: '143.5371'
         y: '15.5'
         z: '-60.532'
-        yaw: '89.3962'
+        yaw: '0.0'
         pitch: '0.0'
       owner:
         owner: BiShop
         uuid: 9754b8e3-52ad-3c33-b44a-a5ed356ad6f2
-    traitnames: scoreboardtrait,lookclose,spawned,fishshop,type,inventory,location,owner,equipment,gravity,mounttrait
+    traitnames: gravity,fishshop,lookclose,equipment,location,type,scoreboardtrait,mounttrait,owner,inventory,spawned
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -219,19 +219,19 @@ npc:
       spawned: true
       type: PLAYER
       location:
-        headYaw: 178.36052
+        headYaw: 0.0
         world: world
         x: '106.5575'
         y: '29.5'
         z: '-69.4912'
-        yaw: '178.3605'
+        yaw: '0.0'
         pitch: '0.0'
       gravity:
         enabled: false
       owner:
         owner: BiShop
         uuid: 9754b8e3-52ad-3c33-b44a-a5ed356ad6f2
-    traitnames: scoreboardtrait,commandtrait,lookclose,spawned,type,location,inventory,equipment,owner,gravity,mounttrait
+    traitnames: gravity,equipment,lookclose,location,type,scoreboardtrait,mounttrait,owner,inventory,spawned,commandtrait
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -276,7 +276,7 @@ npc:
       owner:
         owner: BiShop
         uuid: 9754b8e3-52ad-3c33-b44a-a5ed356ad6f2
-    traitnames: scoreboardtrait,commandtrait,lookclose,spawned,type,inventory,location,owner,equipment,gravity,mounttrait
+    traitnames: gravity,lookclose,equipment,location,type,scoreboardtrait,mounttrait,owner,inventory,commandtrait,spawned
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -309,19 +309,19 @@ npc:
       spawned: true
       type: PLAYER
       location:
-        headYaw: 243.38882
+        headYaw: 0.0
         world: world
         x: '18.4732'
         y: '18.0'
         z: '-77.4845'
-        yaw: '243.3888'
+        yaw: '0.0'
         pitch: '0.0'
       gravity:
         enabled: false
       owner:
         owner: BiShop
         uuid: 9754b8e3-52ad-3c33-b44a-a5ed356ad6f2
-    traitnames: scoreboardtrait,commandtrait,lookclose,spawned,type,location,inventory,owner,equipment,gravity,mounttrait
+    traitnames: gravity,lookclose,equipment,location,type,scoreboardtrait,mounttrait,owner,inventory,spawned,commandtrait
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -354,19 +354,19 @@ npc:
       spawned: true
       type: PLAYER
       location:
-        headYaw: -62.03657
+        headYaw: 0.0
         world: world
         x: '18.449'
         y: '18.0'
         z: '-79.5889'
-        yaw: '-62.0366'
+        yaw: '0.0'
         pitch: '0.0'
       gravity:
         enabled: false
       owner:
         owner: BiShop
         uuid: 9754b8e3-52ad-3c33-b44a-a5ed356ad6f2
-    traitnames: scoreboardtrait,commandtrait,lookclose,spawned,type,location,inventory,owner,equipment,gravity,mounttrait
+    traitnames: gravity,equipment,lookclose,location,type,scoreboardtrait,mounttrait,owner,inventory,commandtrait,spawned
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
