--- a/server/plugins/Citizens/saves.yml
+++ b/server/plugins/Citizens/saves.yml
@@ -120,12 +120,12 @@ npc:
     traits:
       type: PLAYER
       location:
-        headYaw: 319.5366
+        headYaw: -38.234848
         world: world
         x: '105.4995'
         y: '31.0'
         z: '-94.5414'
-        yaw: '319.5366'
+        yaw: '-38.2348'
         pitch: '0.0'
       lookclose:
         range: '5.0'
@@ -145,7 +145,7 @@ npc:
       owner:
         owner: BiShop
         uuid: 9754b8e3-52ad-3c33-b44a-a5ed356ad6f2
-    traitnames: lookclose,location,gravity,inventory,type,scoreboardtrait,equipment,mounttrait,spawned,owner
+    traitnames: location,type,mounttrait,spawned,equipment,gravity,inventory,lookclose,scoreboardtrait,owner
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -154,7 +154,7 @@ npc:
       nameplate-visible: 'true'
       player-skin-name: bishop
   '1':
-    name: §6渔夫
+    name: §6鱼贩
     uuid: edac2078-35af-4c67-bcb6-6a96a6e4e175
     traits:
       spawned: true
@@ -174,17 +174,17 @@ npc:
           '0': 0.0
           '1': 360.0
       location:
-        headYaw: 89.42848
+        headYaw: 0.0
         world: world
         x: '143.5371'
         y: '15.5'
         z: '-60.532'
-        yaw: '89.4285'
-        pitch: '-20.5506'
+        yaw: '0.0'
+        pitch: '0.0'
       owner:
         owner: BiShop
         uuid: 9754b8e3-52ad-3c33-b44a-a5ed356ad6f2
-    traitnames: lookclose,location,gravity,inventory,type,scoreboardtrait,equipment,mounttrait,spawned,fishshop,owner
+    traitnames: location,type,mounttrait,spawned,equipment,gravity,inventory,lookclose,fishshop,scoreboardtrait,owner
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -219,19 +219,19 @@ npc:
       spawned: true
       type: PLAYER
       location:
-        headYaw: -190.9194
+        headYaw: 0.0
         world: world
         x: '106.5575'
         y: '29.5'
         z: '-69.4912'
-        yaw: '-190.9194'
+        yaw: '0.0'
         pitch: '0.0'
       gravity:
         enabled: false
       owner:
         owner: BiShop
         uuid: 9754b8e3-52ad-3c33-b44a-a5ed356ad6f2
-    traitnames: lookclose,location,gravity,inventory,type,equipment,scoreboardtrait,mounttrait,spawned,owner,commandtrait
+    traitnames: location,type,mounttrait,spawned,equipment,gravity,inventory,lookclose,commandtrait,owner,scoreboardtrait
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -264,19 +264,19 @@ npc:
       spawned: true
       type: PLAYER
       location:
-        headYaw: -45.627804
+        headYaw: 0.0
         world: world
         x: '88.4423'
         y: '26.0'
         z: '-111.4712'
-        yaw: '-45.6278'
-        pitch: '-37.632'
+        yaw: '0.0'
+        pitch: '0.0'
       gravity:
         enabled: false
       owner:
         owner: BiShop
         uuid: 9754b8e3-52ad-3c33-b44a-a5ed356ad6f2
-    traitnames: lookclose,location,gravity,inventory,type,equipment,scoreboardtrait,mounttrait,spawned,owner,commandtrait
+    traitnames: location,type,mounttrait,equipment,spawned,gravity,inventory,lookclose,commandtrait,owner,scoreboardtrait
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -309,19 +309,19 @@ npc:
       spawned: true
       type: PLAYER
       location:
-        headYaw: -138.5126
+        headYaw: 0.0
         world: world
         x: '18.4732'
         y: '18.0'
         z: '-77.4845'
-        yaw: '-138.5126'
-        pitch: '-10.038'
+        yaw: '0.0'
+        pitch: '-10.6579'
       gravity:
         enabled: false
       owner:
         owner: BiShop
         uuid: 9754b8e3-52ad-3c33-b44a-a5ed356ad6f2
-    traitnames: lookclose,location,gravity,inventory,type,equipment,scoreboardtrait,mounttrait,spawned,owner,commandtrait
+    traitnames: location,type,mounttrait,equipment,spawned,gravity,inventory,lookclose,commandtrait,owner,scoreboardtrait
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -354,19 +354,19 @@ npc:
       spawned: true
       type: PLAYER
       location:
-        headYaw: -129.49553
+        headYaw: 0.0
         world: world
         x: '18.449'
         y: '18.0'
         z: '-79.5889'
-        yaw: '-129.4955'
-        pitch: '-3.9773'
+        yaw: '0.0'
+        pitch: '-10.4722'
       gravity:
         enabled: false
       owner:
         owner: BiShop
         uuid: 9754b8e3-52ad-3c33-b44a-a5ed356ad6f2
-    traitnames: lookclose,location,gravity,inventory,type,equipment,scoreboardtrait,mounttrait,spawned,owner,commandtrait
+    traitnames: location,type,mounttrait,equipment,spawned,gravity,inventory,lookclose,commandtrait,owner,scoreboardtrait
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -390,7 +390,7 @@ npc:
       owner:
         owner: BiShop
         uuid: 9754b8e3-52ad-3c33-b44a-a5ed356ad6f2
-    traitnames: location,gravity,inventory,type,equipment,scoreboardtrait,mounttrait,spawned,owner
+    traitnames: location,type,mounttrait,equipment,spawned,gravity,inventory,owner,scoreboardtrait
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -400,12 +400,12 @@ npc:
     uuid: dd9e0251-eed5-4d21-81be-077967c94595
     traits:
       location:
-        headYaw: 142.95306
+        headYaw: 179.66928
         world: world
-        x: '110.4726'
-        y: '31.0'
-        z: '-88.5171'
-        yaw: '142.9531'
+        x: '115.3839'
+        y: '29.5'
+        z: '-79.5199'
+        yaw: '179.6693'
         pitch: '0.0'
       gravity:
         enabled: false
@@ -426,7 +426,7 @@ npc:
       owner:
         owner: BiShop
         uuid: 9754b8e3-52ad-3c33-b44a-a5ed356ad6f2
-    traitnames: lookclose,location,gravity,inventory,type,scoreboardtrait,equipment,mounttrait,spawned,owner
+    traitnames: location,type,mounttrait,spawned,equipment,gravity,inventory,lookclose,owner,scoreboardtrait
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
@@ -436,13 +436,13 @@ npc:
     uuid: 51e08537-643a-4733-bd65-cfef220a1d79
     traits:
       location:
-        headYaw: 148.09686
+        headYaw: -119.629776
         world: world
         x: '93.5489'
         y: '31.0'
         z: '-80.3'
-        yaw: '148.0969'
-        pitch: '0.0'
+        yaw: '-119.6298'
+        pitch: '-8.9077'
       gravity:
         enabled: false
       type: PLAYER
@@ -462,7 +462,7 @@ npc:
       owner:
         owner: BiShop
         uuid: 9754b8e3-52ad-3c33-b44a-a5ed356ad6f2
-    traitnames: lookclose,location,gravity,inventory,type,scoreboardtrait,equipment,mounttrait,spawned,owner
+    traitnames: location,type,mounttrait,spawned,equipment,gravity,inventory,lookclose,scoreboardtrait,owner
     navigator:
       speedmodifier: '1.0'
       avoidwater: false
