--- a/server/plugins/DungeonsXL/maps/shenqikuangche/config.yml
+++ b/server/plugins/DungeonsXL/maps/shenqikuangche/config.yml
@@ -11,7 +11,7 @@ time: 6000
 dungeonManager:
   minPlayers: 1
   maxPlayers: 4
-  minLevel: 4
+  minLevel: 5
   icon:
     id: PAPER
     model: 18
@@ -21,49 +21,49 @@ dps:
   bonusRewardProb: 0.005
   '1':
     cmd: give %player% diamond_shovel 1
-    chance: 0.12
+    chance: 0.11
     icon:
       id: DIAMOND_SHOVEL
       displayName: "&f钻石锹"
       model: 0
   '2':
     cmd: give %player% diamond_pickaxe 1
-    chance: 0.12
+    chance: 0.11
     icon:
       id: DIAMOND_PICKAXE
       displayName: "&f钻石镐"
       model: 0
   '3':
     cmd: give %player% diamond_axe 1
-    chance: 0.12
+    chance: 0.11
     icon:
       id: DIAMOND_AXE
       displayName: "&f钻石斧"
       model: 0
   '4':
     cmd: give %player% diamond_hoe 1
-    chance: 0.12
+    chance: 0.11
     icon:
       id: DIAMOND_HOE
       displayName: "&f钻石锄"
       model: 0
   '5':
     cmd: give %player% cake 4
-    chance: 0.16
+    chance: 0.14
     icon:
       id: CAKE
       displayName: "&f蛋糕4个"
       model: 0
   '6':
     cmd: give %player% fermented_spider_eye 10
-    chance: 0.12
+    chance: 0.11
     icon:
       id: FERMENTED_SPIDER_EYE
       displayName: "&6发酵蛛眼10个"
       model: 0
   '7':
     cmd: give %player% blaze_powder 10
-    chance: 0.12
+    chance: 0.11
     icon:
       id: BLAZE_POWDER
       displayName: "&6烈焰粉10个"
@@ -89,3 +89,10 @@ dps:
       id: BLAZE_POWDER
       displayName: "&e精准采集附魔书"
       model: 0
+  '11':
+    cmd: ph giveitem BiShop mjy:tiechi_sword
+    chance: 0.08
+    icon:
+      id: DIAMOND_SWORD
+      displayName: "&2铁齿剑"
+      model: 26
