--- a/server/plugins/DailyQuest/config.yml
+++ b/server/plugins/DailyQuest/config.yml
@@ -36,5 +36,51 @@ SeriesFinish:
   AdditionMoney: 100
   ExtraRewardItemQuantity: 1
 GetQuestNPCId: 7
+AvailableNPC:
+- 9
+- 10
+- 11
+- 12
+- 13
+- 14
+ItemBlackList:
+- ARMOR_STAND
+- BAT_SPAWN_EGG
+- CHAINMAIL_BOOTS
+- CHAINMAIL_CHESTPLATE
+- CHAINMAIL_HELMET
+- CHAINMAIL_LEGGINGS
+- DEBUG_STICK
+- DRAGON_BREATH
+- ELYTRA
+- ENCHANTED_GOLDEN_APPLE
+- EXPERIENCE_BOTTLE
+- FILLED_MAP
+- FIREWORK_ROCKET
+- FIREWORK_STAR
+- FIRE_CHARGE
+- HEART_OF_THE_SEA
+- NETHER_STAR
+- PAINTING
+- TOTEM_OF_UNDYING
+- TRIDENT
+MobBlackList:
+- ARMOR_STAND
+- ENDER_DRAGON
+- GIANT
+- WITHER
+ItemWildcardBlackList:
+- SPAWN_EGG
+- COMMAND_BLOCK
+- _HEAD
+- _BANNER_
+- _MINECART
+- _POTION
+- MUSIC_DISC_
+- _SKULL
+- _ARROW
+- _BOOK
+- _BUCKET
+MobWildcardBlackList: {}
 EnableCommandGetQuest: true
 Database: MYSQL
