--- a/server/plugins/DailyQuest/config.yml
+++ b/server/plugins/DailyQuest/config.yml
@@ -12,25 +12,25 @@ Gui:
     - '&5你找我有什么事吗?'
     Model: 0
   GiveUp:
-    Id: PLAYER_HEAD
+    Id: STICK
     DisplayName: '&c我来放弃任务'
-    Model: 0
+    Model: 66
   GoBack:
-    Id: PLAYER_HEAD
+    Id: PAPER
     DisplayName: '&6我点错了'
-    Model: 0
+    Model: 12
   WhatIsDailyQuest:
-    Id: PLAYER_HEAD
+    Id: STICK
     DisplayName: '&6什么是日常任务？'
-    Model: 0
+    Model: 68
   Accept:
-    Id: PLAYER_HEAD
+    Id: STICK
     DisplayName: '&6我来领取任务'
-    Model: 0
+    Model: 65
   FinishQuest:
-    Id: PLAYER_HEAD
+    Id: STICK
     DisplayName: '&6我来交任务'
-    Model: 0
+    Model: 67
 RandomItemMaxQuantity: 3
 SeriesFinish:
   AdditionMoney: 100
